<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name" translatable="false">tiqr</string>
    <string name="app_url" translatable="false">https://tiqr.org</string>

    <!-- General buttons -->
    <string name="button_ok">OK</string>
    <string name="button_retry">Retry</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>

    <!-- Main -->
    <string name="button_info">About</string>
    <string name="button_surfnet">Surfnet</string>

    <!-- Start -->
    <string name="start_welcome"><![CDATA[<b>Use tiqr on your smartphone to log in to websites easily and secure.</b><br/>
    <br/>
    This app does not contain an active account yet. Register your new tiqr account and follow the instructions for activation.<br/>
    <br/>
    During the activation process you have to scan a QR code.
    Press <b>Scan</b> when asked.]]></string>

    <string name="start_instructions"><![CDATA[<b>Use tiqr on your smartphone to log in</b> <br/>
    <br/>
    1. Open the tiqr push message or press <b>Scan</b> and scan the QR-code on the website.<br/>
    <br/>
    2. Scan your biometric or enter your PIN for tiqr and press <b>OK</b> <br/>
    <br/>
    3. You are logged in!]]></string>

    <string name="start_blocked"><![CDATA[<b>Now what?</b><br/>
    <br/>
    Ask your identity provider(s) for a new account activation.
    For a link to your identity provider(s) check your identities (accessible from the top right).<br/>
    <br />
    With your activation you will receive instructions for reactivating your account.
    Press <b>Scan</b> if asked.]]></string>

    <!-- Scan -->
    <string name="scan_button">Scan</string>
    <string name="scan_permission_required_title">Camera permission required</string>
    <string name="scan_permission_required_message">For scanning a QR code, tiqr needs access to the camera.</string>
    <string name="scan_permission_required_settings">Settings</string>
    <string name="scan_permission_required_dismiss">Cancel</string>

    <!-- Browser -->
    <string name="browser_error_launch">Failed to launch the default browser</string>

    <!-- About -->
    <string name="about_label_version" translatable="false">%1s &#8226; v%2s</string>
    <string name="about_label_provided_by">Provided by:</string>
    <string name="about_label_developed_by">Developed by:</string>
    <string name="about_label_interaction_by">Interaction design:</string>
    <string name="about_label_security_capabilities">Security capabilities:</string>

    <!-- Enroll (Confirm) -->
    <string name="enroll_confirm_title">Confirm account activation</string>
    <string name="enroll_confirm_subtitle">Do you want to activate the following account?</string>
    <string name="enroll_confirm_details">Account details</string>
    <string name="enroll_confirm_domain">You will enroll to the following domain:</string>

    <!-- Enroll (PIN) -->
    <string name="enroll_pin_title">Choose a unique PIN for tiqr</string>
    <string name="enroll_pin_subtitle">Enter the PIN:</string>
    <string name="enroll_pin_notice">Please remember this PIN, it cannot be changed!</string>

    <!-- Enroll (PIN Verify) -->
    <string name="enroll_pin_verify_title">Verify the unique PIN</string>
    <string name="enroll_pin_verify_subtitle">Re-enter the PIN:</string>
    <string name="enroll_pin_verify_no_match_title">PINs don\'t match</string>
    <string name="enroll_pin_verify_no_match_message">The entered PINs don\'t match. Try again.\nChoose a PIN you can remember.</string>

    <!-- Account -->
    <string name="account_full_name">Full name</string>
    <string name="account_id">Tiqr account id</string>
    <string name="account_information">Information</string>
    <string name="account_activated">Account activated!</string>
    <string name="account_upgrade_biometric_title">Upgrade account</string>
    <string name="account_upgrade_biometric_message">Do you want to use biometrics instead of PIN to log in with this account?</string>

    <!-- Authentication (Confirm) -->
    <string name="auth_confirm_title">Are you sure you want to log in?</string>
    <string name="auth_confirm_subtitle">You will be logged in as:</string>
    <string name="auth_confirm_to">to:</string>
    <string name="auth_confirm_select_identity">Select identity</string>
a
    <!-- Authentication (Biometric) -->
    <string name="auth_biometric_title">Use your biometric</string>

    <!-- Authentication (Pin) -->
    <string name="auth_pin_title">Enter your PIN for tiqr</string>

    <!-- Authentication (Fallback) -->
    <string name="auth_fallback_title">Your device seems to be offline</string>
    <string name="auth_fallback_subtitle">Fortunately, you can log in another way:\n\n\t1. Press ‘Enter code’ below in the QR code on your computer.\n\t2. Enter this code:</string>
    <string name="auth_fallback_id">Your ID:</string>
    <string name="auth_fallback_otp">One-time password:</string>
    <string name="auth_fallback_pin_unverified_title">Note: your PIN has not been verified yet.</string>
    <string name="auth_fallback_pin_unverified">If you can\'t login with the credentials above, scan again and enter the correct PIN code.</string>

    <!-- Authentication (Summary) -->
    <string name="auth_summary_title">You have successfully logged in!</string>
    <string name="auth_summary_to">You have logged in on the following domain:</string>

    <!-- Identity -->
    <string name="identity_title">Identities</string>
    <string name="identity_blocked">Blocked</string>
    <string name="identity_blocked_message">Warning: this account is blocked\nand needs to be reactivated.</string>
    <string name="identity_delete_title">Are you sure?</string>
    <string name="identity_delete_message">This account can no longer be used when deleted.</string>
    <string name="identity_biometric_usage">Use biometrics</string>
    <string name="identity_biometric_upgrade">Upgrade to biometrics usage</string>

    <!-- Notification channel -->
    <string name="notification_channel_description">Notifications for messages from tiqr</string>
    <string name="about_copied" tools:ignore="ExtraTranslation">Copied</string>
    
    <string name="app_update_popup_message">App update is ready to install</string>
    <string name="app_update_popup_button">Install</string>
    <string name="app_update_testing_enabled">In-app update testing has been enabled</string>
    <string name="app_update_testing_disabled">In-app update testing has been disabled</string>
</resources>
