<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context="org.tiqr.core.enrollment.EnrollmentConfirmFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enroll_confirm_title"
        android:textAppearance="@style/AppTheme.TextAppearance.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enroll_confirm_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/enroll_confirm_details"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:constraint_referenced_ids="label_name, name, label_id, id, spacer, label_domain, domain"
        app:flow_firstVerticalStyle="spread"
        app:flow_horizontalGap="4dp"
        app:flow_horizontalStyle="spread_inside"
        app:flow_maxElementsWrap="2"
        app:flow_verticalAlign="baseline"
        app:flow_verticalGap="6dp"
        app:flow_verticalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/guideline_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/account_full_name"
        android:textAppearance="@style/AppTheme.TextAppearance.Label"
        app:layout_constrainedWidth="true"
        app:layout_constraintHeight_default="spread"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:breakStrategy="balanced"
        android:gravity="end"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintWidth_default="spread"
        tools:ignore="MissingConstraints,UnusedAttribute"
        tools:text="&lt;identity display name&gt;" />

    <TextView
        android:id="@+id/label_id"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/account_id"
        android:textAppearance="@style/AppTheme.TextAppearance.Label"
        app:layout_constrainedWidth="true"
        app:layout_constraintHeight_default="spread"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:breakStrategy="balanced"
        android:gravity="end"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintWidth_default="spread"
        tools:ignore="MissingConstraints,UnusedAttribute"
        tools:text="&lt;identity identifier&gt;" />

    <Space
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/label_domain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enroll_confirm_domain"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/domain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/AppTheme.TextAppearance.Label"
        tools:ignore="MissingConstraints"
        tools:text="&lt;enrollment url domain&gt;" />

    <Button
        android:id="@+id/button_cancel"
        style="@style/AppTheme.Button.White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/button_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_ok"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".4" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/button_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_cancel"
        app:layout_constraintWidth_percent=".4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/button_container_height" />
</androidx.constraintlayout.widget.ConstraintLayout>