<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2010-2020 SURFnet bv
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions
  ~ are met:
  ~ 1. Redistributions of source code must retain the above copyright
  ~    notice, this list of conditions and the following disclaimer.
  ~ 2. Redistributions in binary form must reproduce the above copyright
  ~    notice, this list of conditions and the following disclaimer in the
  ~    documentation and/or other materials provided with the distribution.
  ~ 3. Neither the name of SURFnet bv nor the names of its contributors
  ~    may be used to endorse or promote products derived from this
  ~    software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE AUTHOR "AS IS" AND ANY EXPRESS OR
  ~ IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
  ~ WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY
  ~ DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE
  ~ GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
  ~ INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER
  ~ IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
  ~ OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
  ~ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context="org.tiqr.core.authentication.AuthenticationFallbackFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_fallback_title"
        android:textAppearance="@style/AppTheme.TextAppearance.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:breakStrategy="balanced"
        android:text="@string/auth_fallback_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:ignore="UnusedAttribute" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="otp, label_id, id"
        app:flow_verticalGap="4dp"
        app:flow_verticalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/unverified_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        app:layout_constraintVertical_bias="0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/AppTheme.TextAppearance.Title"
        android:gravity="center"
        android:textSize="36sp"
        android:letterSpacing="0.1"
        android:paddingBottom="24dp"
        tools:ignore="MissingConstraints"
        tools:text="&lt;otp&gt;" />

    <TextView
        android:id="@+id/label_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/auth_fallback_id"
        android:textAppearance="@style/AppTheme.TextAppearance.Label"
        app:layout_constrainedWidth="true"
        app:layout_constraintHeight_default="spread"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:breakStrategy="balanced"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintWidth_default="spread"
        tools:ignore="MissingConstraints,UnusedAttribute"
        tools:text="&lt;identity&gt;" />

    <TextView
        android:id="@+id/unverified_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/auth_fallback_pin_unverified_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/unverified"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/unverified"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:breakStrategy="balanced"
        android:text="@string/auth_fallback_pin_unverified"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/guideline_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".5" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/button_container_height" />
</androidx.constraintlayout.widget.ConstraintLayout>
